@@ -3,6 +3,9 @@ DATE       AUTHOR      CHANGE
 2004-11-04 patrickh    Changed the location of Tweek data files to $HOME/.tweek
                        on UNIX-based platforms.  Along with this,
                        $HOME/.tweekrc has been renamed to $HOME/.tweek/tweekrc.
+                       Added a new user-specific directory to the default Bean
+                       search path: <Tweek data dir>/beans.  This uses the
+                       platform-specific data directory.
                        NEW VERSION: 0.19.0
 2004-11-04 patrickh    Added EnvironmentService.getOS().
                        NEW VERSION: 0.18.2
